<resources>
    <string name="app_name">ToTheDestination</string>
    <string name="ArrivedToDestination">To The Destination</string>
    <string name="LogIn1">Log In</string>
    <string name="SignUp1">Sign Up</string>
    <string name="SignUp2">Sign Up</string>
    <string name="LogIn2">Log In</string>
    <string name="back1">Back</string>
    <string name="password">Password:</string>
    <string name="AgeOfChild">Age Of Child:</string>
    <string name="detailsFly">Information About The Flight:</string>
    <string name="secondPasword">Password Verification:</string>
    <string name="firstName">Name:</string>
    <string name="detailsAtt">Information About The Attraction:</string>
    <string name="beCareful">Travel Warning:</string>
    <string name="informationAboutProgrammer">Information About Programmer:</string>
    <string name="secondName">Last Name:</string>
    <string name="infromationAboutAttraction">information about attraction:</string>
    <string name="email">Email:</string>
    <string name="myTrips">My Trips:</string>
    <string name="flyName">Fly Name:</string>
    <string name="FlyList">Fly List:</string>
    <string name="airport">Airport:</string>
    <string name="saveChangeAtt">Save Changes</string>
    <string name="allName">Full Name:</string>
    <string name="country">Country:</string>
    <string name="choosing">Choose Flight features:</string>
    <string name="informationMap">Flight Information:</string>
    <string name="dataOnProgrammer">Information About Programmer:</string>
    <string name="flightDateBack">Flight Date Back:</string>
    <string name="flightDate">Flight Date From:</string>
    <string name="howLongFlight">Hours of Flight:</string>
    <string name="flySmart">Fly Smart</string>
    <string name="howMuchHours">Hours of Flight:</string>
    <string name="season">Season:</string>
    <string name="detailsVac">Details about vacation:</string>
    <string name="delete">Delete:</string>
    <string name="add">Add:</string>
    <string name="attExplain">Att Explain:</string>
    <string name="attractionName">Attraction Name:</string>
    <string name="CoordinatesX">Coordinates X:</string>
    <string name="CoordinatesY">Coordinates Y:</string>
    <string name="Attraction">Attraction:</string>
    <string name="attraction">Attraction:</string>
    <string-array name="Spinner_AgeOfChildren">
        <item>Not Important</item>
        <item>Baby</item>
        <item>Child</item>
        <item>Teen</item>
        <item>Adult</item>
    </string-array>
    <string-array name="Spinner_HoursFlight">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="Spinner_attraction">
        <item>Not Important</item>
        <item>Hiking</item>
        <item>Beach</item>
        <item>Landscape</item>
        <item>Skiing</item>
    </string-array>
    <string-array name="Spinner_season">
        <item>Not Important</item>
        <item>Summer</item>
        <item>Winter</item>
        <item>Spring</item>
        <item>Fall</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>

</resources>