<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABC6C4"
    tools:context=".MainActivity6">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dataOnProgrammer"
        android:textColor="#000000"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="95dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstName"
        tools:layout_editor_absoluteX="301dp"
        tools:layout_editor_absoluteY="184dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondName"
        tools:layout_editor_absoluteX="285dp"
        tools:layout_editor_absoluteY="223dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>