<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5CBD7"
    tools:context=".DetailsFlyMain">

    <TextView
        android:id="@+id/infromationAboutFly"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:backgroundTint="#7BAAC3"
        android:layout_marginTop="24dp"
        android:background="#7BAAC3"
        android:text="@string/detailsFly"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etFlyCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="76dp"
        android:text="FlyName"
        android:textColor="#7BAAC3"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etFlyAgeOfChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:minHeight="48dp"
        android:text="Age Of Child"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCoordinatesY" />

    <EditText
        android:id="@+id/etFlySeason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:minHeight="48dp"
        android:text="Season"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFlyAttraction" />

    <EditText
        android:id="@+id/etFlyHoursFlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:minHeight="48dp"
        android:text="Hours Flight"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFlyCountry" />

    <EditText
        android:id="@+id/etFlyAttraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:minHeight="48dp"
        android:text="Attraction"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFlyAgeOfChild" />

    <EditText
        android:id="@+id/etFlyAirport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:minHeight="48dp"
        android:text="Airport"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFlyHoursFlight" />

    <EditText
        android:id="@+id/etCoordinatesX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:minHeight="48dp"
        android:text="CoordinatesX"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFlyAirport" />

    <EditText
        android:id="@+id/etCoordinatesY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:minHeight="48dp"
        android:text="CoordinatesY"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCoordinatesX" />

    <TextView
        android:id="@+id/attName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="96dp"
        android:textStyle="bold|italic"
        android:textSize="16dp"
        android:text="@string/flyName"
        android:textColor="#37474F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveChanges"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="#7BAAC3"
        android:layout_marginTop="460dp"
        android:text="@string/saveChangeAtt"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/hoursFlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:textStyle="bold|italic"
        android:textSize="16dp"
        android:text="@string/howMuchHours"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attName" />

    <TextView
        android:id="@+id/airport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/airport"
        android:textSize="16dp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hoursFlight" />

    <TextView
        android:id="@+id/coordinatesX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/CoordinatesX"
        android:textSize="16dp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/airport" />

    <TextView
        android:id="@+id/coordinatesY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="28dp"
        android:textStyle="bold|italic"
        android:textSize="16dp"
        android:text="@string/CoordinatesY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinatesX" />

    <TextView
        android:id="@+id/ageOfChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="28dp"
        android:text="@string/AgeOfChild"
        android:textStyle="bold|italic"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinatesY" />

    <TextView
        android:id="@+id/attraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="28dp"
        android:textStyle="bold|italic"
        android:textSize="16dp"
        android:text="@string/Attraction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageOfChild" />

    <TextView
        android:id="@+id/season"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/season"
        android:textSize="16dp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attraction" />

</androidx.constraintlayout.widget.ConstraintLayout>