<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABC6C4"
    tools:context=".MasterFlyMain">

    <TextView
        android:id="@+id/flyMasterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="16dp"
        android:text="@string/FlyList"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lv"
        android:layout_width="469dp"
        android:layout_height="597dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="136dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </ListView>

    <Button
        android:id="@+id/add"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/add"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/delete"
        android:layout_width="86dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/delete"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>