<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5CBD7"
    tools:context=".DetailsAttractionMain">

    <TextView
        android:id="@+id/infromationAboutAttraction"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="#7BAAC3"
        android:text="@string/detailsAtt"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ivProduct"
        android:layout_width="115dp"
        android:layout_height="134dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="484dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="88dp"
        android:text="AtName"
        android:textColor="#7BAAC3"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etExplain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:text="explain"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCoordinatesY" />

    <EditText
        android:id="@+id/etCoordinatesX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:text="coordinatesX"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAtName" />

    <EditText
        android:id="@+id/etCoordinatesY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:text="coordinatesY"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCoordinatesX" />

    <TextView
        android:id="@+id/CoordinatesX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/CoordinatesX"
        android:textSize="16dp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attractionName"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/attractionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="104dp"
        android:text="@string/attractionName"
        android:textColor="#37474F"
        android:textSize="16dp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/attExplain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="44dp"
        android:text="@string/attExplain"
        android:textSize="16dp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CoordinatesY"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/CoordinatesY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:textStyle="bold|italic"
        android:textSize="16dp"
        android:text="@string/CoordinatesY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CoordinatesX"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/saveChanges"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="320dp"
        android:backgroundTint="#7BAAC3"
        android:text="@string/saveChangeAtt"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>